[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.6.1"
# use dynamic linking for faster compile times, undo for release
bevy = { version = "0.11.0-dev", git = "https://github.com/bevyengine/bevy.git", rev = "ed50c8b4d9e5d80c724d8cee6b93a834edd92e97" }
rand = "0.8.5"
